@@ -80,24 +80,31 @@ public class SaleController {
 
     @GetMapping("/makeOrder/{cartId}")
     public String makeOrderGet(@PathVariable long cartId, Model model) {
-
+        // Obtém o carrinho de compras usando o ID fornecido na URL
         Cart cart = cartService.getCartById(cartId);
+
+        // Obtém o cliente associado a este carrinho
         Client client = cartService.getClientByCart(cart);
+
+        // Obtém a lista de endereços e cartões de crédito do cliente
         List<Address> addressClientList = client.getAddresses();
         List<CreditCard> creditCardClientList = client.getCreditCards();
+
+        // Inicializa objetos de transferências de dados para troca de quantidade de produtos no carrinho e cupons
         ChangeCartProductQuantityDTO changeCartProductQuantityDTO = new ChangeCartProductQuantityDTO();
         PromotionalCouponDTO promotionalCouponDTO = new PromotionalCouponDTO();
         ExchangeCouponIndividualDTO exchangeCouponIndividualDTO = new ExchangeCouponIndividualDTO();
 
+        // Cria uma lista de produtos do carrinho e um mapa para armazenar o preço total de cada produto
         List<CartsProducts> cartsProductsList = cart.getCartProducts();
-
         HashMap<Long, BigDecimal> cartProductTotalPrices = new HashMap<>();
 
-        for(CartsProducts cartsProducts : cartsProductsList) {
-            // multiply product price by product quantity
+        // Calcula o preço total de cada produto (preço unitário * quantidade)
+        for (CartsProducts cartsProducts : cartsProductsList) {
             cartProductTotalPrices.put(cartsProducts.getProduct().getId(), cartsProducts.getFinalPrice());
         }
 
+        // Adiciona os atributos ao modelo para serem utilizados na view "makeOrder"
         model.addAttribute("saleDTO", new SaleDTO());
         model.addAttribute("clientId", client.getId());
         model.addAttribute("cart", cart);
@@ -109,169 +116,192 @@ public class SaleController {
         model.addAttribute("exchangeCouponIndividualDTO", exchangeCouponIndividualDTO);
         model.addAttribute("orderTotalPrice", cart.getTotalPrice());
 
+        // Retorna a view "makeOrder" para ser renderizada
         return "makeOrder";
     }
 
+
     @PostMapping("/makeOrder/{cartId}")
     public String makeOrderPost(@PathVariable long cartId, @ModelAttribute SaleDTO saleDTO, Model model, RedirectAttributes redirectAttributes) {
+        // Obtém o carrinho de compras
         Cart cart = cartService.getCartById(cartId);
         System.out.println("address in saleDTO: " + saleDTO.getDeliveryAddressId());
+
+        // Obtém o endereço de entrega usando o ID fornecido no DTO
         Address deliveryAddress = addressService.getAddressById(saleDTO.getDeliveryAddressId());
 
+        // Inicializa a lista de cartões de crédito usados na compra
         List<SalesCards> salesCardsList = new ArrayList<>();
 
+        // Para cada ID de cartão de crédito no DTO, cria um objeto SalesCards
         for(long creditCardId: saleDTO.getSalesCardsIds()) {
             SalesCards currentSaleCard = new SalesCards();
-
             currentSaleCard.setCreditCard(creditCardService.getCreditCardById(creditCardId));
-
             salesCardsList.add(currentSaleCard);
-
         }
 
-        if(salesCardsList.size() == 1) {
-            salesCardsList.getFirst().setAmountPaid(cart.getTotalPrice());
+        // Se apenas um cartão de crédito foi usado, define o valor pago como o preço total do carrinho
+        if (salesCardsList.size() == 1) {
+            salesCardsList.get(0).setAmountPaid(cart.getTotalPrice());
         }
 
+        // Cria um mapa para os preços totais dos produtos no carrinho
         List<CartsProducts> cartsProductsList = cart.getCartProducts();
-
         HashMap<Long, BigDecimal> cartProductTotalPrices = new HashMap<>();
-
-        for(CartsProducts cartsProducts : cartsProductsList) {
-            // multiply product price by product quantity
+        for (CartsProducts cartsProducts : cartsProductsList) {
             cartProductTotalPrices.put(cartsProducts.getProduct().getId(), cartsProducts.getFinalPrice());
         }
 
-        model.addAttribute("salesCardsList", salesCardsList); // sessionattribute, to keep data for more than 1 request
+        // Adiciona os dados ao modelo e redireciona para a página de finalização do pedido
+        model.addAttribute("salesCardsList", salesCardsList);
         model.addAttribute("deliveryAddress", deliveryAddress);
         model.addAttribute("cartProductTotalPrices", cartProductTotalPrices);
 
         System.out.println("Lista de salescards: " + salesCardsList);
 
         redirectAttributes.addFlashAttribute("saleCart", cart);
-
         redirectAttributes.addFlashAttribute("orderTotalPrice", cart.getTotalPrice());
 
-        // log de transação do método.
-        //Client navigator = clientService.getClientById(clientNavigator.getInstance().getClientId());
-        //logService.logTransaction(String.valueOf(navigator), "insert", cart.toString());
-
+        // Retorna o redirecionamento para a página "finishOrder" com o ID do carrinho
         return "redirect:/sales/finishOrder/" + cartId;
     }
 
+
     @GetMapping("/finishOrder/{cartId}")
     public String finishOrderGet(@PathVariable long cartId, Model model) {
-
+        // Obtém o carrinho de compras e o cliente associado
         Cart cart = cartService.getCartById(cartId);
         Client client = cartService.getClientByCart(cart);
+
+        // Obtém o endereço de entrega do modelo (que foi adicionado na requisição anterior)
         Address deliveryAddress = (Address) model.getAttribute("deliveryAddress");
         System.out.println(deliveryAddress.getNickname());
+
+        // Obtém a lista de cartões de crédito usados no pedido (que foi adicionado anteriormente)
         List<SalesCards> listSalesCards = (List<SalesCards>) model.getAttribute("salesCardsList");
 
+        // Inicializa o DTO para os cartões de crédito
         SaleCardDTO saleCardDTO = new SaleCardDTO();
         model.addAttribute("saleCardDTO", saleCardDTO);
 
+        // Calcula o valor do frete com base no estado de entrega
         BigDecimal freight = deliveryAddress.getState().getFreight();
         model.addAttribute("freight", freight);
 
-        for(SalesCards saleCard: listSalesCards) {
-
+        // Preenche os valores pagos nos cartões de crédito (que ainda não foram preenchidos)
+        for (SalesCards saleCard : listSalesCards) {
             saleCardDTO.getAmountPaid().put(saleCard.getCreditCard().getId(), null);
-
         }
 
-        System.out.println(saleCardDTO.getAmountPaid());
-
+        // Calcula o valor total do frete
         BigDecimal amountFreight = cart.getTotalPrice().multiply(freight);
 
+        // Calcula o preço final da venda, incluindo o frete
         BigDecimal saleFinalPrice = cart.getTotalPrice().add(amountFreight).setScale(2, RoundingMode.HALF_EVEN);
 
         System.out.println(saleFinalPrice);
 
+        // Adiciona o preço final ao modelo
         model.addAttribute("saleFinalPrice", saleFinalPrice);
 
+        // Retorna a view "finishOrder"
         return "finishOrder";
     }
 
+
+    // Define o método para lidar com requisições POST no caminho "/finishOrder/{cartId}"
     @PostMapping("/finishOrder/{cartId}")
     public String createSale(@PathVariable long cartId, @ModelAttribute SaleCardDTO saleCardDTO, Model model,
                              @RequestParam("freight") BigDecimal freight,
                              @RequestParam("saleFinalPrice") BigDecimal saleFinalPrice,
                              HttpServletRequest request) {
 
+        // Obtém o carrinho de compras (Cart) com base no ID fornecido na URL
         Cart cart = cartService.getCartById(cartId);
 
+        // Cria uma nova instância de Sale (Venda)
         Sale sale = new Sale();
 
+        // Define os intervalos de caracteres permitidos para gerar o código da venda (letras e números)
         char[][] allowedCharacterRanges = {{'a','z'},{'A','Z'},{'0','9'}};
 
+        // Usando o RandomStringGenerator para gerar um código aleatório de 6 caracteres para a venda
         RandomStringGenerator generator = new RandomStringGenerator.Builder()
                 .withinRange(allowedCharacterRanges)
                 .build();
 
+        // Gera o código da venda, prefixando com "#"
         String saleCode = "#" + generator.generate(6);
 
+        // Define o código da venda no objeto Sale
         sale.setSaleCode(saleCode);
 
+        // Associa o carrinho de compras à venda
         sale.setCart(cart);
 
+        // Obtém o endereço de entrega do modelo (provavelmente setado anteriormente na página)
         Address deliveryAddress = (Address) model.getAttribute("deliveryAddress");
         sale.setDeliveryAddress(deliveryAddress);
 
+        // Obtém a lista de cartões de crédito usados no pagamento da venda
         List<SalesCards> listSalesCards = (List<SalesCards>) model.getAttribute("salesCardsList");
 
+        // Define o frete e o cupom promocional da venda
         sale.setFreight(freight);
         sale.setPromotionalCouponApplied(sale.getCart().getPromotionalCoupon());
+
+        // Define o preço final da venda
         sale.setFinalPrice(saleFinalPrice);
 
-        // declaring the total amount paid by the credit cards and
+        // Inicializa a variável para o total pago pelos cartões de crédito
         BigDecimal totalPaidByCards = BigDecimal.valueOf(0);
-        // errors list
+
+        // Lista para armazenar erros encontrados durante a validação
         List<String> errors = new ArrayList<>();
 
+        // Percorre os valores pagos por cada cartão de crédito e atualiza os valores dos cartões na venda
         for (Map.Entry<Long, BigDecimal> entry : saleCardDTO.getAmountPaid().entrySet()) {
             Long key = entry.getKey();
             BigDecimal value = entry.getValue();
 
+            // Para cada cartão de crédito na lista de cartões, verifica se o ID corresponde ao cartão atual
             for (SalesCards saleCard : listSalesCards) {
                 if (saleCard.getCreditCard().getId() == key) {
 
+                    // Atualiza o valor pago por esse cartão
                     saleCard.setAmountPaid(value);
 
-                    // incrementing the variable according to each amount paid by the cards
+                    // Acumula o total pago pelos cartões
                     totalPaidByCards = totalPaidByCards.add(saleCard.getAmountPaid());
-
                 }
             }
         }
 
-
+        // Verifica se não há cupom promocional e se não há cupons de troca aplicados
         if (sale.getPromotionalCouponApplied() == null && sale.getExchangeCouponsApplied().isEmpty()) {
 
+            // Verifica se o valor pago por cada cartão é maior ou igual a R$10,00
             for (SalesCards saleCard : listSalesCards) {
-
-                // checking if the value paid is bigger than R$10 if, and only if, there is no promotional coupon or exchangeCoupon
                 if (saleCard.getAmountPaid().compareTo(BigDecimal.valueOf(10.00)) < 0) {
                     errors.add("O valor pago pelo cartão " + saleCard.getCreditCard().getCardNumber() + " não pode ser inferior a R$10,00.");
                 }
-
             }
-
         }
 
+        // Log dos preços finais para depuração
         System.out.println("Preço final da venda: " + saleFinalPrice);
         System.out.println("Total pago pelos cartões: " + totalPaidByCards);
 
-        // seeing if the value paid by cards is equal the total sale price
-
-        if (totalPaidByCards.compareTo(saleFinalPrice) != 0) { // 0 = (values are equal)
+        // Verifica se o total pago pelos cartões é igual ao preço final da venda
+        if (totalPaidByCards.compareTo(saleFinalPrice) != 0) {
             errors.add("O total pago pelos cartões é excedente ou insuficiente para pagar pela compra.");
         }
 
+        // Obtém o preço total dos produtos no carrinho (presumivelmente calculado anteriormente)
         HashMap<Long, BigDecimal> cartProductTotalPrice = (HashMap<Long, BigDecimal>) model.getAttribute("cartProductTotalPrice");
 
+        // Se houver erros, adiciona os dados ao modelo e retorna para a página de "finalizar pedido"
         if (!errors.isEmpty()) {
-
             model.addAttribute("errors", errors);
             model.addAttribute("cartProductTotalPrice", cartProductTotalPrice);
             model.addAttribute("saleCart", cart);
@@ -284,187 +314,253 @@ public class SaleController {
             return "finishOrder";
         }
 
+        // Salva a venda no banco de dados
         saleService.saveSale(sale);
 
+        // Atualiza as informações dos cartões de crédito usados na venda
         for (Map.Entry<Long, BigDecimal> entry : saleCardDTO.getAmountPaid().entrySet()) {
             Long key = entry.getKey();
 
             for (SalesCards saleCard : listSalesCards) {
-                System.out.println(saleCard.getCreditCard().getId());
-
                 if (saleCard.getCreditCard().getId() == key) {
+                    // Cria a chave composta para o relacionamento entre a venda e o cartão de crédito
                     SalesCardsKey salesCardsKey = new SalesCardsKey();
                     salesCardsKey.setCreditCardId(creditCardService.getCreditCardById(key).getId());
                     salesCardsKey.setSaleId(sale.getId());
 
+                    // Define o ID e a venda para o cartão de crédito
                     saleCard.setId(salesCardsKey);
                     saleCard.setSale(sale);
 
+                    // Adiciona o cartão usado na venda à lista de cartões da venda
                     sale.getCardsUsedInThisSale().add(saleCard);
-
                 }
-
             }
-
         }
 
-        for(ExchangeCoupon exchangeCoupon: sale.getExchangeCouponsApplied()) {
-            if(cartService.isExchangeCouponSurpassingCartTotalTooMuch(cart, exchangeCoupon).compareTo(BigDecimal.valueOf(0)) > 0) {
+        // Verifica se o valor do cupom de troca é superior ao valor do carrinho e gera novos cupons de troca se necessário
+        for (ExchangeCoupon exchangeCoupon : sale.getExchangeCouponsApplied()) {
+            if (cartService.isExchangeCouponSurpassingCartTotalTooMuch(cart, exchangeCoupon).compareTo(BigDecimal.valueOf(0)) > 0) {
                 exchangeService.generateExchangeCouponSurpass(cart.getClient(), cartService.isExchangeCouponSurpassingCartTotalTooMuch(cart, exchangeCoupon));
             }
         }
 
+        // Define o status da venda como "Em processamento"
         sale.setStatus(SaleStatusEnum.EM_PROCESSAMENTO);
 
+        // Define a data e hora da venda
         LocalDateTime now = LocalDateTime.now();
-
         sale.setDateTimeSale(now);
 
+        // Obtém o cliente associado à venda
         Client client = clientService.getClientById(clientNavigator.getInstance().getClientId());
 
+        // Salva a venda no banco de dados novamente (isso pode ser redundante)
         saleService.saveSale(sale);
 
+        // Atualiza o carrinho do cliente após a venda
         cartService.changeClientCart(client);
 
-        // creating notification
+        // Cria e envia uma notificação para o cliente informando que a compra foi realizada com sucesso
         NotificationDTO notificationDTO = new NotificationDTO();
         notificationDTO.setCategory(NotificationCategoryEnum.VENDA);
         notificationDTO.setTitle("Compra realizada!");
-        notificationDTO.setDescription("Sua compra de R$" + sale.getFinalPrice() + "foi realizada com sucesso.");
+        notificationDTO.setDescription("Sua compra de R$" + sale.getFinalPrice() + " foi realizada com sucesso.");
         notificationService.createNotification(client, notificationDTO);
 
+        // Recalcula o ranking do cliente após a compra
         clientService.recalculateClientRanking();
 
-        // log de transação do método.
-        //Client navigator = clientService.getClientById(clientNavigator.getInstance().getClientId());
-        //logService.logTransaction(String.valueOf(navigator), "insert", sale.toString());
-
+        // Redireciona o usuário para a página de compras após concluir o pedido
         return "redirect:/products/shop";
     }
 
+
+    // Define o método para lidar com requisições GET no caminho "/seeSales"
     @GetMapping("/seeSales")
     public String seeSales(Model model) {
-
+        // Cria uma nova instância de ChangeSaleStatusDTO e a adiciona ao modelo
         model.addAttribute("changeSaleStatusDTO", new ChangeSaleStatusDTO());
+
+        // Cria uma nova instância de ChangeSaleDateTimeDTO e a adiciona ao modelo
         model.addAttribute("changeSaleDateTimeDTO", new ChangeSaleDateTimeDTO());
+
+        // Adiciona todos os valores possíveis do enum SaleStatusEnum ao modelo para seleção no front-end
         model.addAttribute("status", SaleStatusEnum.values());
+
+        // Adiciona a lista de todas as vendas ao modelo, obtida do serviço saleService
         model.addAttribute("sales", saleService.getAllSales());
+
+        // Adiciona a lista de todas as trocas ao modelo, obtida do serviço exchangeService
         model.addAttribute("exchanges", exchangeService.getAllExchanges());
 
+        // Retorna o nome da view (HTML/JSP) que será renderizada, neste caso "adminSalesView"
         return "adminSalesView";
     }
 
+
+    // Define o método para lidar com requisições PUT no caminho "/seeSales/changeSaleStatus/{saleId}"
     @PutMapping("/seeSales/changeSaleStatus/{saleId}")
     public String changeSaleStatus(@PathVariable long saleId, @ModelAttribute ChangeSaleStatusDTO changeSaleStatusDTO) {
+        // Chama o serviço saleService para alterar o status da venda, passando a venda encontrada pelo ID e os dados do DTO
         saleService.changeSaleStatus(saleService.getSaleById(saleId), changeSaleStatusDTO);
 
+        // Após alterar o status da venda, redireciona o usuário para a página "/sales/seeSales"
         return "redirect:/sales/seeSales";
     }
 
+
+    // Define o método para lidar com requisições GET no caminho "/getSaleExchangeList/{saleId}"
     @GetMapping("/getSaleExchangeList/{saleId}")
-    @ResponseBody
+    @ResponseBody // A anotação @ResponseBody indica que o retorno do método será diretamente convertido para o corpo da resposta HTTP
     public List<Exchange> getSaleExchangeList(@PathVariable long saleId) {
+        // Obtém a venda correspondente ao ID fornecido (saleId) utilizando o serviço saleService
         Sale sale = saleService.getSaleById(saleId);
 
+        // Retorna a lista de trocas associada à venda
         return sale.getExchangeList();
     }
 
+    // Define o método para lidar com requisições GET no caminho "/getSpecificExchange/{exchangeId}"
     @GetMapping("/getSpecificExchange/{exchangeId}")
-    @ResponseBody
+    @ResponseBody // A anotação @ResponseBody indica que o retorno do método será diretamente convertido para o corpo da resposta HTTP
     public Exchange getSpecificExchange(@PathVariable long exchangeId) {
+        // Obtém a troca específica utilizando o serviço exchangeService
         Exchange exchange = exchangeService.getExchangeById(exchangeId);
 
+        // Retorna a troca específica
         return exchange;
     }
 
+    // Define o método para lidar com requisições GET no caminho "/getSaleCartId/{saleId}"
     @GetMapping("/getSaleCartId/{saleId}")
-    @ResponseBody
+    @ResponseBody // A anotação @ResponseBody indica que o retorno do método será diretamente convertido para o corpo da resposta HTTP
     public long getSaleCartId(@PathVariable long saleId, Model model) {
+        // Obtém a venda correspondente ao ID fornecido (saleId) utilizando o serviço saleService
         Sale sale = saleService.getSaleById(saleId);
 
+        // Retorna o ID do carrinho associado à venda
         return sale.getCart().getId();
     }
 
+    // Define o método para lidar com requisições GET no caminho "/getSaleDate/{saleId}"
     @GetMapping("/getSaleDate/{saleId}")
-    @ResponseBody
+    @ResponseBody // A anotação @ResponseBody indica que o retorno do método será diretamente convertido para o corpo da resposta HTTP
     public LocalDateTime getSaleDate(@PathVariable long saleId, Model model) {
+        // Obtém a venda correspondente ao ID fornecido (saleId) utilizando o serviço saleService
         Sale sale = saleService.getSaleById(saleId);
 
+        // Retorna a data e hora da venda
         return sale.getDateTimeSale();
     }
 
+    // Define o método para lidar com requisições GET no caminho "/getSaleCode/{saleId}"
     @GetMapping("/getSaleCode/{saleId}")
-    @ResponseBody
+    @ResponseBody // A anotação @ResponseBody indica que o retorno do método será diretamente convertido para o corpo da resposta HTTP
     public String getSaleCode(@PathVariable long saleId, Model model) {
+        // Obtém a venda correspondente ao ID fornecido (saleId) utilizando o serviço saleService
         Sale sale = saleService.getSaleById(saleId);
 
+        // Retorna o código da venda
         return sale.getSaleCode();
     }
 
+    // Define o método para lidar com requisições GET no caminho "/getSaleCartProducts/{saleId}"
     @GetMapping("/getSaleCartProducts/{saleId}")
-    @ResponseBody
+    @ResponseBody // A anotação @ResponseBody indica que o retorno do método será diretamente convertido para o corpo da resposta HTTP
     public List<CartsProducts> getSaleCartProducts(@PathVariable long saleId, Model model) {
+        // Obtém a venda correspondente ao ID fornecido (saleId) utilizando o serviço saleService
         Sale sale = saleService.getSaleById(saleId);
 
+        // Retorna a lista de produtos do carrinho associado à venda
         return sale.getCart().getCartProducts();
     }
 
+    // Define o método para lidar com requisições GET no caminho "/getSaleClientId/{saleId}"
     @GetMapping("/getSaleClientId/{saleId}")
-    @ResponseBody
+    @ResponseBody // A anotação @ResponseBody indica que o retorno do método será diretamente convertido para o corpo da resposta HTTP
     public long getSaleClientId(@PathVariable long saleId, Model model) {
+        // Obtém a venda correspondente ao ID fornecido (saleId) utilizando o serviço saleService
         Sale sale = saleService.getSaleById(saleId);
 
+        // Retorna o ID do cliente associado ao carrinho da venda
         return sale.getCart().getClient().getId();
     }
 
+    // Define o método para lidar com requisições GET no caminho "/getSaleClientName/{saleId}"
     @GetMapping("/getSaleClientName/{saleId}")
-    @ResponseBody
+    @ResponseBody // A anotação @ResponseBody indica que o retorno do método será diretamente convertido para o corpo da resposta HTTP
     public String getSaleClientName(@PathVariable long saleId, Model model) {
+        // Obtém a venda correspondente ao ID fornecido (saleId) utilizando o serviço saleService
         Sale sale = saleService.getSaleById(saleId);
 
+        // Retorna o nome do cliente associado ao carrinho da venda
         return sale.getCart().getClient().getName();
     }
 
+
+    // Define o método para lidar com requisições GET no caminho "/getSaleTotal/{saleId}"
     @GetMapping("/getSaleTotal/{saleId}")
-    @ResponseBody
+    @ResponseBody // A anotação @ResponseBody indica que o retorno do método será diretamente convertido para o corpo da resposta HTTP
     public BigDecimal getSaleTotal(@PathVariable long saleId, Model model) {
+        // Obtém a venda correspondente ao ID fornecido (saleId) utilizando o serviço saleService
         Sale sale = saleService.getSaleById(saleId);
 
+        // Imprime o valor do preço final da venda no console (apenas para debug)
         System.out.println(sale.getFinalPrice());
 
+        // Retorna o valor do preço final da venda
         return sale.getFinalPrice();
     }
 
+
+    // Define o método para lidar com requisições GET no caminho "/getFreight/{saleId}"
     @GetMapping("/getFreight/{saleId}")
-    @ResponseBody
+    @ResponseBody // A anotação @ResponseBody indica que o retorno do método será diretamente convertido para o corpo da resposta HTTP
     public BigDecimal getFreight(@PathVariable long saleId, Model model) {
+        // Obtém a venda correspondente ao ID fornecido (saleId) utilizando o serviço saleService
         Sale sale = saleService.getSaleById(saleId);
 
+        // Retorna o valor do frete associado à venda
         return sale.getFreight();
     }
 
+    // Define o método para lidar com requisições GET no caminho "/getPromotionalCoupon/{saleId}"
     @GetMapping("/getPromotionalCoupon/{saleId}")
-    @ResponseBody
+    @ResponseBody // A anotação @ResponseBody indica que o retorno do método será diretamente convertido para o corpo da resposta HTTP
     public ResponseEntity<?> getPromotionalCoupon(@PathVariable long saleId, Model model) {
+        // Obtém a venda correspondente ao ID fornecido (saleId) utilizando o serviço saleService
         Sale sale = saleService.getSaleById(saleId);
+
+        // Obtém o cupom promocional associado ao carrinho da venda
         PromotionalCoupon coupon = sale.getCart().getPromotionalCoupon();
 
+        // Verifica se o cupom é nulo
         if (coupon == null) {
-            return ResponseEntity.ok().body(Collections.emptyMap()); // Return an empty map if the coupon is null
+            // Se não houver cupom, retorna uma resposta HTTP 200 OK com um mapa vazio
+            return ResponseEntity.ok().body(Collections.emptyMap());
         }
-        return ResponseEntity.ok(coupon); // Otherwise, return the coupon
+
+        // Se o cupom não for nulo, retorna a resposta HTTP 200 OK com o cupom
+        return ResponseEntity.ok(coupon);
     }
 
+    // Define o método para lidar com requisições HTTP PUT no caminho "/seeSales/changeSaleDateTime/{saleId}"
     @PutMapping("/seeSales/changeSaleDateTime/{saleId}")
     public String changeSaleDateTime(@PathVariable long saleId, @ModelAttribute ChangeSaleDateTimeDTO changeSaleDateTimeDTO) {
+        // Obtém a venda com o ID fornecido (saleId) usando o serviço saleService.
         Sale sale = saleService.getSaleById(saleId);
 
+        // Altera a data e hora da venda com base no novo valor fornecido pelo DTO
         sale.setDateTimeSale(changeSaleDateTimeDTO.getNewDateTime());
 
+        // Salva a venda atualizada de volta no banco de dados usando o serviço saleService
         saleService.saveSale(sale);
 
+        // Redireciona o usuário para a página "/sales/seeSales" após a alteração
         return "redirect:/sales/seeSales";
     }
+
 
 
 
